# profile.ivi.lemolo

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  groups  lemolo.xml  org.tizen.dialer.xml  project.config
data/examples/: contacts.csv
data/scripts/: ofono-efl-contacts-db-create.py
data/themes/: default-hd.edc  default-sd.edc  default.edc  night.edc
data/themes/default/: answer_screen.edc  buttons.edc  call.edc  colors.edc  compose.edc  contacts-bg.edc  contacts.edc  dialer.edc  history-bg.edc  history.edc  keypad.edc  messages-overview-list.edc  messages-overview.edc  messages.edc  multiparty-list.edc  popup.edc
data/themes/includes/: action_answer.edc  answer_screen.edc  button.edc  buttons.edc  call.edc  colors.edc  compose.edc  contacts-bg.edc  contacts.edc  dialer.edc  history-bg.edc  history.edc  keypad.edc  main.edc  messages-overview.edc  messages.edc  multiparty-list.edc  popup.edc  scroller.edc
data/themes/night/: answer_screen.edc  call.edc  colors.edc  compose.edc  contacts.edc  dialer.edc  history-bg.edc  include.edc  keypad.edc  messages-overview.edc  popup.edc  scroller.edc
dialer/: callscreen.c  callscreen.h  contacts-tizen.c  contacts.c  contacts.h  gui.c  gui.h  history.c  history.h  keypad.c  keypad.h  log.h  main.c  ofono.c  ofono.h  rc.c  rc.h  simple-popup.c  ussd.c  ussd.h  util.c  util.h
messages/: compose.c  compose.h  gui.c  gui.h  main.c  overview.c  overview.h  rc.c
packaging/: lemolo.changes  lemolo.spec  ofono-efl.spec
po/: LINGUAS  POTFILES.in  de_DE.po  en_US.po  zh_CN.po  zh_TW.po
tizen/: README  answer_daemon.c  answer_daemon.desktop.in  dialer.desktop.in  dialer_daemon.c  dialer_open.c  message_daemon.c  order.in  org.tizen.call.desktop.in  org.tizen.dialer.desktop.in  org.tizen.dialer.service.in  org.tizen.phone.desktop.in  start-ofono
utils/: amb.c  amb.h  contacts-ofono-efl.h  contacts-tizen.c  contacts.c  contacts.h  i18n.c  i18n.h  ofono.c  ofono.h  pulseaudio.c  pulseaudio.h  simple-popup.c  simple-popup.h  util.c  util.h
